--- a/styles.css
+++ b/styles.css
@@ -4,28 +4,21 @@
 }
 
 .container {
-    min-width: 80vw;
-    min-height: 80vh;
+    width: 100%;
     display: flex;
     flex-flow: row wrap;
-    /* justify-content: space-around;
-    align-content: space-between; */
-    border: 1px dotted blueviolet;
+    justify-content: space-between;
+    border: 2px dotted blueviolet;
+    padding: 1px;
 
 }
 
 .grid-item {
-    width: 200px;
-    height: 200px;
-    margin: 2px;
-    border: 2px solid black;
+    width: 6.20%;
+    padding-top: 4%;
+    box-sizing: border-box;
+    margin-bottom: 1px;
+    border: 1px solid black;
 
 }
 
-main {
-    margin: 0px;
-    padding: 0px;
-    border: 2px solid black;
-    min-width: 90vw;
-    min-height: 95vh;
-}
