--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,13 @@
 main {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .btn {
     margin: 5px;
     margin-top: 0px;
+    width: 200px;
     background-color: rgb(44, 43, 49);
     color: white;
     font-weight: bold;
@@ -18,8 +20,9 @@ main {
     padding: 10px;
 }
 
-.container {
-    width: 100%;
+/* .container {
+    width: 800px;
+    height: 850px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
@@ -28,19 +31,46 @@ main {
     padding: 2px;
 }
 
+
 .grid-item {
-    width: 6.20%;
+    width: 6%;
     padding-top: 4%;
     box-sizing: border-box;
     margin-bottom: 1px;
     border: 1px solid black;
-}
+} 
 
 .grid-item-trail {
     background-color: rgb(58, 60, 98);
-    width: 6.20%;
+    width: 6%;
     padding-top: 4%;
     box-sizing: border-box;
     margin-bottom: 1px;
     border: 1px solid black;
+} */
+
+.container {
+   display: flex;
+   flex-wrap: wrap;
+   width: 100%; 
+   height: 100vh; 
+   align-content: flex-start; 
+   border: 2px dotted blueviolet;
+}
+  
+.square {
+   box-sizing: border-box; 
+   margin: 1px; 
+   border: 1px solid black;
+}
+
+.square-trail {
+    box-sizing: border-box; 
+    margin: 1px; 
+    border: 1px solid black;
+    background-color: rgb(58, 60, 98);
+ }
+ 
+.modal {
+    display: none;
 }
