--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,23 @@
 :root {
     margin: 0px;
-    padding: 0px;;
-}
-
-main {
+    padding: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex: 1;
 }
 
+main {
+    height: 800px;
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+} 
+
 .btn {
+    
     margin: 5px;
     margin-top: 0px;
     width: 200px;
@@ -19,35 +27,6 @@ main {
     font-size: large;
     padding: 10px;
 }
-
-/* .container {
-    width: 800px;
-    height: 850px;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    border: 2px dotted blueviolet;
-    margin: 0px;
-    padding: 2px;
-}
-
-
-.grid-item {
-    width: 6%;
-    padding-top: 4%;
-    box-sizing: border-box;
-    margin-bottom: 1px;
-    border: 1px solid black;
-} 
-
-.grid-item-trail {
-    background-color: rgb(58, 60, 98);
-    width: 6%;
-    padding-top: 4%;
-    box-sizing: border-box;
-    margin-bottom: 1px;
-    border: 1px solid black;
-} */
 
 .container {
    display: flex;
@@ -71,6 +50,3 @@ main {
     background-color: rgb(58, 60, 98);
  }
  
-.modal {
-    display: none;
-}
