--- a/styles.css
+++ b/styles.css
@@ -43,10 +43,13 @@ main {
    border: 1px solid black;
 }
 
-.square-trail {
+/* .square-trail {
     box-sizing: border-box; 
     margin: 1px; 
     border: 1px solid black;
     background-color: var(--trail-bg-color);
- }
+ } */
  
+.test {
+    background-color: rgb(0, 0, 0);
+}
