--- a/styles.css
+++ b/styles.css
@@ -41,15 +41,26 @@ main {
    box-sizing: border-box; 
    margin: 1px; 
    border: 1px solid black;
+   transition: background-color 0.3s ease;
 }
 
-/* .square-trail {
-    box-sizing: border-box; 
-    margin: 1px; 
-    border: 1px solid black;
-    background-color: var(--trail-bg-color);
- } */
- 
-.test {
-    background-color: rgb(0, 0, 0);
+.info {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.current-grid-size {
+    width: 100px;
+    height: 45px;
+    padding: 10px;
+    padding-top: 12px;
+    margin-left: 10px;
+    background-color: rgb(44, 43, 49);
+    color: white;
+    font-weight: bold;
+    font-size: large;
+    text-align: center;
+    font-family: sans-serif;
+    box-sizing: border-box;
 }
